/*

Copyright 2018 Continusec Pty Ltd

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.

*/

syntax = "proto3";

option go_package = "github.com/continusec/geecert";

service GeeCertServer {
    rpc GetSSHCerts (SSHCertsRequest) returns (SSHCertsResponse) {}
}

message SSHCertsRequest {
    string id_token = 1;
    string public_key = 2;
}

enum ResponseCode {
    OK = 0;
    INVALID_ID_TOKEN = 1;
    NO_CERTS_ALLOWED = 2;
}

message SSHCertsResponse {
    ResponseCode status = 1;
    string certificate = 2;
    repeated string certificate_authorities = 3;
    repeated string config = 4;
}

message ServerConfig {
    message UserConfig {
        repeated string profiles = 4;
    }

    message Profile {
        repeated string principals = 1;
        map<string,string> cert_permissions = 2;
        repeated string ssh_config_lines = 3;
        repeated string known_hosts = 4;
    }

    string ca_key_path = 1;
    int32 generate_cert_duration_seconds = 2;

    map<string,UserConfig> allowed_users = 4;
    int32 listen_port = 5;
    string allowed_domain_for_id_token = 6;
    string allowed_client_id_for_id_token = 7;
    
    string server_cert_path = 8;
    string server_key_path = 9;
    
    string ca_comment = 11;

    int32 http_listen_port = 12; // actually listens https if host_signing_tls_path set
    repeated string allowed_hosts = 13;

    // no longer supported
    // string caddy_file_path = 14;

    int32 ssh_connect_for_publickey_port = 15;

    map<string,Profile> user_profiles = 16;

    // path to pem with key, cert and intermediates
    string host_signing_tls_path = 17;

    // e.g. https://accounts.google.com/.well-known/openid-configuration for Google
    // e.g. https://login.microsoftonline.com/<tenancy id>/.well-known/openid-configuration for Azure AD
    string oidc_configuration_url = 18;

    // if set verify "appid" claim for client ID, INSTEAD OF "aud" claim - useful for Azure Access Token
    bool look_for_audience_in_app_id = 19;

    // if set, check for suffix in email field instead of "hd" cliam. useful for Azure Access Token
    bool look_for_hosted_domain_in_email = 20;

    // if set, don't require email_verified field. Useful for Azure Access token
    bool skip_email_verified = 21;
}
